# image-edit-rmcp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Dockerfile  Function.md  LICENSE  README.md  README_EN.md  docker-compose.yml  功能树.md
docs/: broener-获取原始html.md  browner-getstart.md  browner-获取markdown.md  fetch-markdown-setup.md  html-to-markdown-architecture.md  node-server-architecture.md  数据库结构.md  测试图片.md  魔搭生图docs.md
src/: image_processing.rs  lib.rs  main.rs  mcp_server.rs  modelscope.rs  web_pages.rs
src/cache/: ai_image_storage.rs  hash.rs  metadata.rs  mod.rs  storage.rs
src/tools/: crop_image.rs  edit_image.rs  fetch_image.rs  generate_image.rs  get_image_info.rs  list_ai_images.rs  locate_object.rs  mod.rs  ocr_extract.rs  rotate_image.rs  url_validation.rs
templates/: secret.html  upload.html
