[package]
name = "image-edit-rmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "transport-worker", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal", "time"] }
tower-http = { version = "0.5", features = ["fs"] }
url = "2"
